data/derived/fa15/progs/unify/prog2014.ml.out
Characters 87-88:
  | Sine(e) -> sin(pi *. e)
                         ^
Error: This expression has type expr but an expression was expected of type
         float
